@startuml Class Diagram

note "DisplayGroup" as DGroup

' **使用関係**

Alarm *-- AlarmState
Alarm *-- AlarmTime

DGroup .. IDisplay
AlarmDisplayController .. DGroup
AlarmDisplayController --> Button
AlarmDisplayController --> ManagerService
AlarmDisplayController --> ExecutionService

AlarmDataManager --> LocalStorageManager

ManagerService --> AlarmList
ExecutionService --> SoundPlayer
ExecutionService --> TimeScheduler
ManagerService --> AlarmDataManager

IDisplay <|.. Display

Display --> TimeFormatter

ISoundPlayer <|.. SoundPlayer

' **列挙型**

enum AlarmState {
    ' アラームOFF
    DISABLED
    ' アラームONで待機(=WAITING)
    ENABLED
    ' 音が鳴る
    RINGING
}

enum ButtonType {
    ADD
    EDIT
    SAVE
    DELETE
    CLEAR
    CANCEL
}

' **インターフェース**

interface "IAddDisplay & IEditDisplay & IRuleDisplay & IListDisplay & IModalDisplay" as IDisplay {
    + renderAdd(): void
    + renderClose(): void

    + renderEdit(alarm: Alarm): void
    + renderClose(): void

    + renderRule(massage: string):void
    ' + renderMissedAlarm(): void;

    + renderList(alarms: Alarm[], selectedIds: Set<string>)

    + renderCloseAlertModal(): void
    + renderOpenAlertModal(props: {title: string; onStop: () => void;}): void
}

interface ISoundPlayer {
    - audio: HTMLAudioElement;
    + startSound(): void
    + stopSound(): void
}

note right: 共通インターフェース(common.pumlに定義)

' **クラス定義**

class DuplicateAlarmTimeViolation {}
class AlarmLimitExceededViolation {}

class SoundPlayer {
    - audio: HTMLAudioElement;
    + startSound(): void
    + stopSound(): void
}

class ModalService {
    + showModalView(): void
    + haideModalView(): void
}

' アラーム一覧表示を表示するクラス
class "AddDisplay & EditDisplay & RuleDisplay & ListDisplay & ModalDisplay" as Display {
    + constructor(private modal: ModalService)
    + renderAdd(): void
    + renderClose(): void

    + constructor(private modal: ModalService)
    + renderEdit(alarm: Alarm): void
    + renderClose(): void

    + renderRule(massage: string):void
    ' + renderMissedAlarm(): void;

    + renderList(alarms: Alarm[], selectedIds: Set<string>)

    + renderCloseAlertModal(): void
    + renderOpenAlertModal(props: {title: string; onStop: () => void;}): void
}

' 時刻形式
class TimeFormatter {
    '  ミリ秒を "HH:MM:SS.ms" 形式にフォーマットする。ストップウォッチ向け
    + formatMilliSeconds(milliseconds: number): string

    '  秒を "MM:SS" 形式にフォーマットする。タイマー向け
    + formatSeconds(seconds: number): string

    '  時・分を "HH:MM" 形式にフォーマットする。アラーム向け
    + formatHourMinute(hour: number, minute: number): string
    '  { 例: (9, 5) → "09:05" }
    - format(time: AlarmTime): string
}

note right: 共通クラス(common.pumlに定義)

' ボタン制御(ボタン用汎用クラス) ⇨ クリックイベントを登録する・受け取るだけ
class Button {
    type ButtonClickHandler = () => void;
    ' constructor(private element: HTMLButtonElement) {}
    + enabled(): void
     ' this.buttonElement.disabled = false;
    + disabled(): void
     ' this.buttonElement.disabled = true;
    ' 渡された処理を実行してください的な
    + setOnClick(handler: ButtonClickHandler): void
     ' this.element.addEventListener("click", handler);
    ' 作成したCSSのあるクラスを適用する
    + addClass(className: string): void
    ' ボタン要素そのものを取得する
    + getElement(): HTMLButtonElement
    ' 指定した親要素にボタンを追加する
    + appendTo(parent: HTMLElement): void
}

note right: 共通クラス(common.pumlに定義)

class Alarm {
    - time: AlarmTime
    - alarmId: string
    - state: AlarmState = AlarmState.ENABLED
    - selected: boolean = false
    
    + toggleOnOff(): void
    ' 汎用化以外での状態管理⇩⇩
    + isActive(): boolean 
    + startRinging(): void
    + stopRinging(): void
    + isSelected(): boolean 
    + toggleSelected(): void
    + updateTime(time: AlarmTime): void
    + getTime(): AlarmTime
    + getId(): string
    + getState(): AlarmState
    + static createAlarm(time: AlarmTime): Alarm
}

' アラームの集合管理(メモリ上管理)
' = アラームの一覧を動かす(管理)ため
class AlarmList {
    - alarms: Alarm[];
    - readonly MAX_SET_LIMIT = 5
    - listeners: (AlarmRemovedListener)[] = [];
    + isAlarmSetLimit(): boolean
    + isAlarmDuplicate(time: AlarmTime): boolean

    + addAlarm(alarm: Alarm): Result<void, AlarmViolationType>
    + editAlarm(id: string, time: AlarmTime): Result<void, AlarmViolationType>
    + remove(id :string): void
    + onRemoved(listener: AlarmRemovedListener): void

    + getAll(): Alarm[]
    + setAll(alarms: Alarm[]): void
    ' アラームの状態変更
    + findById(id: string): Alarm | undefined
    ' 編集を保存する
    ' + editSaveAlarm(time: AlarmTime, id: string): void
        ' ーーー例外エラーverーーー
        ' const target = this.getFindAlarm(id);
        ' // 自分以外で重複チェック
        ' const exists = this.alarms.some(a =>
        '     a.getId() !== id &&
        '     a.getTime().equals(time)
        ' );
        ' if (exists) {
        '     throw new DuplicateAlarmTimeError();
        ' }
        ' target.changeTime(time);
        ' ーーーResult型ーーー
        ' const target = this.getFindAlarm(id);
        ' // 自分以外で重複チェック
        ' const exists = this.alarms.some(a =>
        '     a.getId() !== id &&
        '     a.getTime().equals(time)
        ' );
        ' if (exists) {
        '     return { ok: false, error: new DuplicateAlarmTimeError() };
        ' }
        ' target.changeTime(time);
        ' return { ok: true, value: undefined };
    ' - validateLimit(): void
        ' ーーー例外エラーverーーー
        ' if (this.alarms.length >= 5) {
        '   throw new AlarmLimitExceededError();
        ' }
        ' ーーーResult型ーーー
        ' if (this.alarms.length >= 5) {
        '     return { ok: false, error: new AlarmLimitExceededError() };
        ' }
    ' - validateDuplicate(time: AlarmTime): void
        ' ーーー例外エラーverーーー
        ' const exists = this.alarms.some(a =>
        '   a.getTime().equals(time)
        ' );
        ' if (exists) {
        '   throw new DuplicateAlarmTimeError();
        ' }
        ' ーーーResult型ーーー
        ' const exists = this.alarms.some(a =>
        '     a.getTime().equals(time)
        ' );
        ' if (exists) {
        '     return { ok: false, error: new DuplicateAlarmTimeError() };
        ' }
        ' this.alarms.push(alarm);
        ' return { ok: true, value: undefined };

        }

' ValueObject
' 中身の値が同じなら同じものとして扱う(値そのもの) → 参照された値を！例)07:30 と 07:30 は同じ
class AlarmTime {
    ' public readonly
    ' ① 値は外から参照できる必要がある  
    ' ② でも変更はさせない  
    constructor(public readonly hour: number, public readonly minute: number)
    + equals(other: AlarmTime): boolean
    + getHour(): number
    + getMinute(): number
}

' アラームのロジック処理クラス
class ManagerService {
    + constructor(private alarmList: AlarmList, private dataManager: AlarmDataManager)

    + onAlarmRemoved(listener: AlarmRemovedListener): void

    ' -----Alarm-----
    + toggleAlarm(id: string): void

    ' -----DataManager・AlarmList-----
    + initialLoad(): void
    ' 過去時刻の未処理アラーム判定メソッド と 起動時に通知
    ' + checkMissedAlarms(): void
    ' - this.dataManager.loadAll(): Alarm[]
    ' - 通知メソッド

    + deleteMany(id: string[]): void
    + delete(id: string): void
    + canAddAlarm(): boolean
    + editAlarm(id: string, time: AlarmTime): Result<void, AlarmViolationType>
    + saveAlarm(time: AlarmTime): Result<void, AlarmViolationType>
    + getAlarms(): Alarm[]
    + findById(id: string): Alarm | undefined


    ' 全件削除
    ' + resetAlarm(): void
    ' - resetAll(): Alarm[]

    ' １件削除
    ' + deleteAlarm(id: string): void
    ' this.alarmList.remove(id);
    ' this.dataManager.delete(id); 
    ' this.dataManager.saveAll(this.alarmList.getAll());
    ' 追加ボタンが押下されたよ！
}

class ExecutionService {
    - listener?: TimeReachedListener;
    - currentRinging: Alarm | null = null;
    ' 複数アラームのタイマー管理
    ' - schedulerMap<string, TimeScheduler>
    + constructor(private scheduler: TimeScheduler, private sound: SoundPlayer)
    ' - onTimeReached: (alarm: Alarm) => void
    ' { alarm.toggleOnOff();        // 状態変更
    '   this.dataManager.saveAll(this.getAllAlarms()); // 永続化
    '   this.onTimeReached(alarm); } ← ここで鳴る + UI通知

    + timeReached(listener: TimeReachedListener): void
    ' this.onTimeReached = lesterner;
    - handleTimeReached(alarm: Alarm): void
    ' this.onTimeReached;

    ' -----TimeScheduler-----
    ' スケジューラ開始
    + startAlarmMonitoring(alarm: Alarm): void
    + stopAlarmMonitoring(id: string): void

    ' -----SoundPlayer-----
    ' 音の再生・停止指示
    ' + startAlarm(now: AlarmTime): void 
        ' ⬇️鳴ったアラームある？
        ' const events = this.alarmList.changeState(now);
        ' ⬇全てのアラームをループで確認
        ' for (const event of events) {
        '     this.handle(event);
        '   }
        ' }
        ' ⬇1件でもあれば音鳴らす的な
        ' private handle(event: AlarmRangEvent): void {
        '  this.soundPlayer.play();
        ' }
    + stopAlarm(): void
    ' { this.sound.stopSound();}
    + stopAllAlarm(): void
}

note right #LightGreen: Facadeパターン(神クラスになっていた)

' アラーム時刻の監視をするクラス
class TimeScheduler {
    ' 内部状態を保持するメンバー変数
    ' - alarm: Alarm;
    ' - timerId: number | null = null;
    ' アラームIDごとにタイマーを管理する箱
    - alarms: Map<string, number> = new Map();
    ' 鳴動条件も
    ' + monitorAlarmTime(alarm: Alarm): void

    + startMonitoring(alarm: Alarm, callback: CallBackMold): void
    ' {
    ' toggleボタンがONになると、設定時刻までの時刻を計算開始するメソッド
    ' // setTimeoutなど
    ' }
    + stopMonitoring(id: string): void
    ' toggleボタンがOFFになると、計算停止するメソッド
    ' 鳴動開始時刻になると、計算停止するメソッド
    ' // clearTimeoutなど
    ' }
    + stopAll(): void
}

' 画面を制御するクラス(アラーム編集) イベントハンドラーと開始・停止指示
class AlarmDisplayController {
    メンバー変数⇩
    - buttons = new Map<ButtonType, Button>();
    - selectedIds = new Set<string>();
    - mode: Mode = "add";
    - editingId: string | null = null;

    constructor⇩
    - display:DisplayGroup,
    - managerService: IManagerService,
    - executionService: IExecutionService,
    - binder: SetUpEventBinder = new SetUpEventBinder(),
    - timeFactory: TimeFactory = new TimeFactory(),
    ' - setListener(() => this.onTimeReached()),
    
    ' - onTimeReached():
    ' this.display.renderAlertDialog(alarm: Alarm): void    
    ' 起動時処理 = 通知はUIがするので、「ボタン押下後処理も起動」もUIで行うため
    + init(): void
    ' クリック処理を登録する
    + registerButton(type: ButtonType, button: Button): void

    ' - onButtonClicked(type: ButtonType): void
    ' - onRowClicked(id: string): void
    ' - onToggleClicked(id: string): void

    ' 編集ボタンが押された時のメソッド ↓↓↓↓↓↓
    ' - onEditButtonClicked(id: Alarm): void
        ' ーーー例外エラーverーーー
        ' try {
        ' alarmService.edit(...);
        ' } catch (e) {
        ' if (e instanceof DuplicateAlarmTimeError) {
        ' display.renderRule("同時刻は設定できません");
        ' }
        ' if (e instanceof AlarmLimitExceededError) {
        ' display.renderRule("5件までです"); ←これは不要？
        ' }
        ' ーーーResult型ーーー
        ' const result = service.edit(...);
        ' if (!result.ok) {
        ' if (result.error instanceof DuplicateAlarmTimeError) {
        ' display.renderRule("同時刻は設定できません");
        ' }
        ' if (result.error instanceof AlarmLimitExceededError) {
        ' display.renderRule("アラームは5件までです"); ←これは不要？
        ' }
        ' }

    ' [ Commandパターン ]
    ' constructor(buttons: Record<ButtonType, Button>) {
    ' this.buttons = {
    '   [ButtonType.STOP]: () => this.stop(),
    '   [ButtonType.EDIT]: () => this.edit(),
    '   [ButtonType.DELETE]: () => this.delete(),
    '   [ButtonType.TOGGLE]: () => this.toggle(),
    ' };

    ' Object.entries(buttons).forEach(([type, button]) => {
    '   button.setOnClick(this.buttons[type as ButtonType]);
    ' });
}

' note right #LightGreen: ボタン押下時の分岐方法はSwitchではなくCommandパターンでもアリかも。

' データの追加・保存・削除・取得に特化した役割
class AlarmDataManager {
    - storage: LocalStorageManager;

    ' アラームのデータを保存する為(重複禁止や最大件数も)のメソッド ↓↓↓↓↓↓
    + saveAll(alarms: Alarm[]): void
    + loadAll(): Alarm[]
}

' 「保存」と「読み取り」のみの役割(永続化管理)
class LocalStorageManager {
    + saveAlarmData(key: string, data: string): void
    + loadAlarmData(key: string): string | null
}

@enduml